--- a/app/package.json
+++ b/app/package.json
@@ -20,9 +20,10 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.83.0",
     "expo": "~54.0.27",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.10",
     "expo-document-picker": "~14.0.8",
-    "expo-file-system": "^19.0.19",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
